new proj/src/objects/GE_DS_Tech_Assignment__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Sets up the Location IDs and other download object data filters for each technician so the Data Cube will download only necessary data to the Mobile for Laptop client.</description>
    <fields>
        <fullName>GE_DS_Locations_1__c</fullName>
        <label>Locations 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_DS_Locations_2__c</fullName>
        <label>Locations 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_DS_Locations_3__c</fullName>
        <label>Locations 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_DS_Regions__c</fullName>
        <label>Regions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_DS_Technician_ID__c</fullName>
        <label>Technician ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>GE DS Tech Assignment</label>
</CustomObject>